# google-search-console-mcp

./: .gitignore  CATALOG.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
src/gsc_mcp_oauth/: __main__.py  auth.py  gsc_clients.py  server.py
src/gsc_mcp_oauth/tools/: analytics.py  inspection.py  properties.py  sitemaps.py
